--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "amazon-cognito-identity-js": "^5.2.10",
     "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@types/passport-jwt": "^3.0.7",
+    "amazon-cognito-identity-js": "^5.2.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jwks-rsa": "^2.1.5",
